--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -173,7 +173,8 @@
                             <img src='/images/onerror/user_no_photo.png'>
                             <div class="ucard-part2">
                                 <span class="ucard-username-mode2">MrBombastic</span>
-                                <p class="ucard-description">Hello, this is my default description. I give information here.
+                                <p class="ucard-description">Hello, this is my default description. I give information
+                                    here.
                                 </p>
                                 <div class="ucard-stats">
                                     <div class="ucard-likes">
@@ -320,7 +321,7 @@
             </div>
         </div>
     </template>
-    
+
     <template id="addReplyTemplate">
         <div class="add_reply-cont">
             <div class="replyfieldBody">
@@ -381,7 +382,7 @@
             <a asp-controller="Home" asp-action="Register">Sign Up</a>
         </div>
     </form>
-    
+
 
     <div class="theme-switcher">
         <div class="ts-header">
@@ -474,7 +475,7 @@
         }
     </div>
 
-    
+
     <!--LAYOUT STARTS HERE-->
 
     <header>
@@ -517,7 +518,7 @@
                             <i class="bi bi-caret-down-fill"></i>
                         </div>
                     </div>
-                    
+
                     <div class="account-dropdown">
                         <div class="ad-theme-cont">
                             <span>Dark theme</span>
@@ -553,6 +554,57 @@
             @RenderBody()
         </main>
     </div>
+
+    <footer>
+        <div class="footer-body">
+            <div class="about_us">
+                <span class="f-section_titles">About us</span>
+                <span class="about_us-body">
+                    We are a website. It's not a neighborhood. Its not a house, or a mall, or a store. It's what
+                    people use to connect with one another, and with their favorite brands and products. And there
+                    are too many, way too many, that would rather build walls to keep you outside, and not in.
+                </span>
+            </div>
+            <div class="contact">
+                <span class="f-section_titles">Contact</span>
+                <div class="contact-body">
+                    <div class="contact-item">
+                        <i class="bi bi-envelope"></i>
+                        <div class="contact-list">
+                            <span>help@omnefictio.com</span>
+                            <span>muhammedirsat000@gmail.com</span>
+                        </div>
+                    </div>
+                    <div class="contact-item">
+                        <i class="bi bi-telephone"></i>
+                        <div class="contact-list">
+                            <span>90 (539) 698 70 49</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="social_media">
+                    <a href="#"><i class="bi bi-instagram"></i></a>
+                    <a href="#"><i class="bi bi-twitter"></i></a>
+                    <a href="#"><i class="bi bi-facebook"></i></a>
+                    <a href="#"><i class="bi bi-discord"></i></a>
+                </div>
+            </div>
+            <div class="useful_links">
+                <span class="f-section_titles">Useful links</span>
+                <div class="useful_links-body">
+                    <ul>
+                        <li><a href="#">About us</a></li>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Terms & Conditions</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="copyright">
+            <span>This website doesn't have copyrights yet.</span>
+        </div>
+    </footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
