changing modal background - 1

--- a/OmneFictio.Web/Views/Home/Read.cshtml
+++ b/OmneFictio.Web/Views/Home/Read.cshtml
@@ -4,11 +4,11 @@
 @{
     ViewData["Title"] = "Read";
     @section Stylesheets {
-    <link rel="stylesheet" href="~/css/postitem.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/read.css" asp-append-version="true" />
+        <link rel="stylesheet" href="~/css/postitem.css" asp-append-version="true" />
+        <link rel="stylesheet" href="~/css/read.css" asp-append-version="true" />
     }
     @section Scripts {
-    <script src="~/js/read.js" asp-append-version="true"></script>
+        <script src="~/js/read.js" asp-append-version="true"></script>
     }
 }
 @{
@@ -30,125 +30,128 @@
     </div>
 </template>
 
-<div class="orderby-cont" id="orderby-modal">
-    <div class="obt-header">
-        <div class="obt-title">
-            <span>Order By</span>
+<div class="orderby-cont modalbg-base" id="orderby-modal">
+    <div class="orderby-box">
+        <div class="obt-header">
+            <div class="obt-title">
+                <span>Order By</span>
+            </div>
+            <div class="obt-close" id="ob-close">
+                <i class="bi bi-x-lg"></i>
+            </div>
         </div>
-        <div class="obt-close" id="sb-close">
-            <i class="bi bi-x-lg"></i>
-        </div>
-    </div>
-    <div class="obt-body">
-        <div class="obt-content">
-            <div class="obt-item">
-                <i class="bi bi-caret-right-fill visible"></i>
-                <span>Recent</span>
-            </div>
-            <div class="obt-item">
-                <i class="bi bi-caret-right-fill"></i>
-                <span>Oldest</span>
-            </div>
-            <div class="obt-item">
-                <i class="bi bi-caret-right-fill"></i>
-                <span>Rate</span>
-            </div>
-            <div class="obt-item">
-                <i class="bi bi-caret-right-fill"></i>
-                <span>Points</span>
+        <div class="obt-body">
+            <div class="obt-content">
+                <div class="obt-item">
+                    <i class="bi bi-caret-right-fill visible"></i>
+                    <span>Recent</span>
+                </div>
+                <div class="obt-item">
+                    <i class="bi bi-caret-right-fill"></i>
+                    <span>Oldest</span>
+                </div>
+                <div class="obt-item">
+                    <i class="bi bi-caret-right-fill"></i>
+                    <span>Rate</span>
+                </div>
+                <div class="obt-item">
+                    <i class="bi bi-caret-right-fill"></i>
+                    <span>Points</span>
+                </div>
             </div>
         </div>
     </div>
 </div>
-
-<div class="filter-cont" id="filter-modal">
-    <div class="f-header">
-        <div class="f-reset_cont">
-            <input type="button" value="Reset" id="f-resetbtn">
+<div class="filter-cont modalbg-base" id="filter-modal">
+    <div class="filter-box">
+        <div class="f-header">
+            <div class="f-reset_cont">
+                <input type="button" value="Reset" id="f-resetbtn">
+            </div>
+            <div class="f-close" id="f-close">
+                <i class="bi bi-x-lg"></i>
+            </div>
         </div>
-        <div class="f-close" id="f-close">
-            <i class="bi bi-x-lg"></i>
-        </div>
-    </div>
-    <div class="f-body">
-        @{
-            string? typeQuery = Context.Request.RouteValues["Type"]!.ToString();
-            if (typeQuery == "Fanfiction" || typeQuery == "fanfiction")
-            {
-                <div class="f-fanfiction_settings">
-                    <div class="ffs-header">
-                        <button data-button="choose_series" id="fanfic-chooseseries">
-                            <i class="bi bi-search"></i> Series <i class="bi bi-plus"></i>
-                        </button>
+        <div class="f-body">
+            @{
+                string? typeQuery = Context.Request.RouteValues["Type"]!.ToString();
+                if (typeQuery == "Fanfiction" || typeQuery == "fanfiction")
+                {
+                    <div class="f-fanfiction_settings">
+                        <div class="ffs-header">
+                            <button data-button="choose_series" id="fanfic-chooseseries">
+                                <i class="bi bi-search"></i> Series <i class="bi bi-plus"></i>
+                            </button>
+                        </div>
+                        <div class="ffs-series_include">
+                            <!-- <span data-fseries="***">***<i class="bi bi-x-circle f-removeseriesbtn"></i></span>
+                                        <input type="hidden" name="seriesinclude" value="***"/> -->
+                        </div>
                     </div>
-                    <div class="ffs-series_include">
-                        <!-- <span data-fseries="konosuba">Konosuba<i class="bi bi-x-circle f-removeseriesbtn"></i></span>
-                        <input type="hidden" name="seriesinclude" value="konosuba"/> -->
-                    </div>
-                </div>
+                }
             }
-        }
 
-        <div class="f-options">
-            <select name="minrate">
-                <option value="0">Min rate</option>
-                <option value="5">5+</option>
-                <option value="6">6+</option>
-                <option value="7">7+</option>
-                <option value="8">8+</option>
-                <option value="9">9+</option>
-            </select>
-            <select name="language">
-                <option value="0">Language</option>
-                <option value="1">Turkish</option>
-                <option value="2">English</option>
-                <option value="3">French</option>
-                <option value="4">German</option>
-                <option value="5">Japanese</option>
-            </select>
-            <select name="poststatus">
-                <option value="0">Cur. state</option>
-                <option value="1">In-progress</option>
-                <option value="2">Paused</option>
-                <option value="3">Dropped</option>
-                <option value="4">Finished</option>
-            </select>
-            <select name="ratedas">
-                <option value="0">Rated as</option>
-                <option value="1">E - Everyone</option>
-                <option value="2">T - 13+</option>
-                <option value="3">M - 15+</option>
-                <option value="4">A - 18+</option>
-            </select>
-            <select name="lastupdate">
-                <option value="0">Last update</option>
-                <option value="1">&#60; 1 day</option>
-                <option value="2">&#60; 3 day</option>
-                <option value="3">&#60; 1 week</option>
-                <option value="4">&#60; 2 week</option>
-                <option value="5">&#60; 1 month</option>
-                <option value="6">&#60; 2 month</option>
-            </select>
-        </div>
-        <div class="f-tagsbtn_cont">
-            <button class="f-includetag" id="f-includetagbtn">Tags<i class="bi bi-plus"></i></button>
-            <button class="f-excludetag" id="f-excludetagbtn">Tags<i class="bi bi-dash"></i></button>
-        </div>
-        <div class="f-tagsincexc f-tags_include">
-            <!--
+            <div class="f-options">
+                <select name="minrate">
+                    <option value="0">Min rate</option>
+                    <option value="5">5+</option>
+                    <option value="6">6+</option>
+                    <option value="7">7+</option>
+                    <option value="8">8+</option>
+                    <option value="9">9+</option>
+                </select>
+                <select name="language">
+                    <option value="0">Language</option>
+                    <option value="1">Turkish</option>
+                    <option value="2">English</option>
+                    <option value="3">French</option>
+                    <option value="4">German</option>
+                    <option value="5">Japanese</option>
+                </select>
+                <select name="poststatus">
+                    <option value="0">Cur. state</option>
+                    <option value="1">In-progress</option>
+                    <option value="2">Paused</option>
+                    <option value="3">Dropped</option>
+                    <option value="4">Finished</option>
+                </select>
+                <select name="ratedas">
+                    <option value="0">Rated as</option>
+                    <option value="1">E - Everyone</option>
+                    <option value="2">T - 13+</option>
+                    <option value="3">M - 15+</option>
+                    <option value="4">A - 18+</option>
+                </select>
+                <select name="lastupdate">
+                    <option value="0">Last update</option>
+                    <option value="1">&#60; 1 day</option>
+                    <option value="2">&#60; 3 day</option>
+                    <option value="3">&#60; 1 week</option>
+                    <option value="4">&#60; 2 week</option>
+                    <option value="5">&#60; 1 month</option>
+                    <option value="6">&#60; 2 month</option>
+                </select>
+            </div>
+            <div class="f-tagsbtn_cont">
+                <button class="f-includetag" id="f-includetagbtn">Tags<i class="bi bi-plus"></i></button>
+                <button class="f-excludetag" id="f-excludetagbtn">Tags<i class="bi bi-dash"></i></button>
+            </div>
+            <div class="f-tagsincexc f-tags_include">
+                <!--
             <span data-ftag="comedy">Comedy<i class="bi bi-x-circle f-removetagbtn"></i></span>
             <input type="hidden" name="taginclude" value="comedy" data-ftagref="comedy"/>
             -->
-        </div>
-        <div class="f-tagsincexc f-tags_exclude">
-            <!--
+            </div>
+            <div class="f-tagsincexc f-tags_exclude">
+                <!--
             <span data-ftag="romance">Romance<i class="bi bi-x-circle f-removetagbtn"></i></span>
             <input type="hidden" name="tagexclude" value="romance" data-ftagref="romance"/>
             -->
+            </div>
         </div>
-    </div>
-    <div class="f-submit_cont">
-        <input type="submit" id="f-submitbtn" value="Filter">
+        <div class="f-submit_cont">
+            <input type="submit" id="f-submitbtn" value="Filter">
+        </div>
     </div>
 </div>
 
