--- a/OmneFictio.Web/wwwroot/css/site.css
+++ b/OmneFictio.Web/wwwroot/css/site.css
@@ -80,6 +80,21 @@ select {
     transform: rotate(360deg);
   }
 }
+.modalbg-base {
+  display: none;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 504;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3764705882);
+  justify-content: center;
+  align-items: flex-start;
+}
+
 .modalbg1 {
   display: none;
   width: 100%;
@@ -1009,6 +1024,7 @@ footer .footer-body .contact .contact-body {
 footer .footer-body .contact .contact-body .contact-item {
   display: flex;
   align-items: flex-start;
+  flex-wrap: wrap;
   gap: 10px;
 }
 footer .footer-body .contact .contact-body .contact-item i {
@@ -1164,8 +1180,8 @@ footer .footer-body .useful_links {
   .filter-tagdd,
 .filter-addseries,
 .login-modal,
-.orderby-cont,
-.filter-cont,
+.orderby-box,
+.filter-box,
 .theme-switcher {
     width: 100% !important;
   }
