--- a/OmneFictio.Web/wwwroot/css/site.scss
+++ b/OmneFictio.Web/wwwroot/css/site.scss
@@ -78,6 +78,20 @@ select {
 }
 
 //Background clickable shadows
+.modalbg-base{
+    display: none;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 504;
+    width: 100%;
+    height: 100%;
+    background-color: #00000060;
+    justify-content: center;
+    align-items: flex-start;
+}
 .modalbg1 {
     display: none;
     width: 100%;
@@ -1121,6 +1135,7 @@ footer {
                 .contact-item {
                     display: flex;
                     align-items: flex-start;
+                    flex-wrap: wrap;
                     gap: 10px;
 
                     i {
@@ -1349,8 +1364,8 @@ footer {
     .filter-tagdd,
     .filter-addseries,
     .login-modal,
-    .orderby-cont,
-    .filter-cont,
+    .orderby-box,
+    .filter-box,
     .theme-switcher {
         width: 100% !important;
     }
